style: set a selector color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+::selection {
+  background: #005167;
+  color: #fff;
+}
+
 @layer base {
   :root {
     --background: 220 44% 100%;
